WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270790
http/wpt/webrtc/video-script-transform.html, http/wpt/webrtc/video-script-transform-simulcast.html and imported/w3c/web-platform-tests/webrtc/simulcast/basic.https.html are failing on x86_64 bots
https://bugs.webkit.org/show_bug.cgi?id=270790
Summary
http/wpt/webrtc/video-script-transform.html, http/wpt/webrtc/video-script-tra...
youenn fablet
Reported
2024-03-11 05:51:27 PDT
http/wpt/webrtc/video-script-transform.html, http/wpt/webrtc/video-script-transform-simulcast.html and imported/w3c/web-platform-tests/webrtc/simulcast/basic.https.html are failing on x86 Monterey bots
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-11 05:51:40 PDT
<
rdar://problem/124384840
>
youenn fablet
Comment 2
2024-03-11 05:52:49 PDT
The underlying issue seems to be due to the max buffer pool size of 10 constraint added for mock cameras
youenn fablet
Comment 3
2024-03-11 06:03:26 PDT
I was able to reproduce on Sonoma x86, not arm64. Retitling.
EWS
Comment 4
2024-03-12 05:27:16 PDT
Committed
275975@main
(87648049b5dd): <
https://commits.webkit.org/275975@main
> Reviewed commits have been landed. Closing PR #25724 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug