http/wpt/webrtc/video-script-transform.html, http/wpt/webrtc/video-script-transform-simulcast.html and imported/w3c/web-platform-tests/webrtc/simulcast/basic.https.html are failing on x86_64 bots rdar://124384840 https://bugs.webkit.org/show_bug.cgi?id=270790

Reviewed by Eric Carlson.

I can reproduce locally on my x86 device by running one of these tests in parallel.
The mock camera is failing capture if no frame is generated during 1 second.
This happens since we are using a max buffer pool of 10 pixel buffers and it can take some time to free the pixel buffers.
When increasing the limit to 5 seconds (aka 150 at 30fps), I am no longer able to reproduce.

* Source/WebCore/platform/mediastream/mac/MockRealtimeVideoSourceMac.mm:
(WebCore::MockRealtimeVideoSourceMac::updateSampleBuffer):

Canonical link: https://commits.webkit.org/275975@main